Checked with real 1.1.0 and fixed a couple of things